# rust-first-api

./: .env.example  Cargo.toml  docker-compose.yml
migrations/: 20250616174739_init.down.sql
src/: main.rs  model.rs  schema.rs  services.rs
