[package]
name = "second_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.2"
actix-web = "4.0"
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.130"
uuid = { version = "1.13.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }